--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,8 +2,10 @@
 <html lang="{{ .Site.LanguageCode }}">
   {{ partial "head.html" . }}
   <body>
+    <div class="container">
     {{ partial "header.html" . }}
 
     {{ partial "footer.html" . }}
+    </div>
   </body>
 </html>
