--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,6 +3,7 @@
   {{ .Hugo.Generator }}
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
+  <link rel='stylesheet' id='oswald-css'  href='//fonts.googleapis.com/css?family=Oswald&#038;ver=3.3.2' type='text/css' media='all' />
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/styles.css">
   {{ if eq .URL "/" }}
   <title>{{ .Title }}</title>
