--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,79 @@
 h1 {
   text-align: center;
 }
+
+/*
+ * -----------------------------------------------
+ *                      Base
+ * -----------------------------------------------
+ */
+body {
+	background-color: #fff;
+	background-image: -moz-linear-gradient( rgba(0,0,0,0.22), rgba(255,255,255,0) 80px );
+	background-image: -webkit-linear-gradient( rgba(0,0,0,0.22), rgba(255,255,255,0) 80px );
+	color: #555;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 13px;
+	margin: 0;
+	text-align: center;
+}
+
+.container {
+	height: auto;
+	margin: 0 auto;
+	width: 900px;
+}
+
+header {
+	min-height: 180px;
+	padding-top: 70px;
+	width: 900px;
+}
+
+
+/*
+ * -----------------------------------------------
+ *                     Typo
+ * -----------------------------------------------
+ */
+
+a:hover {
+	color: #36bcab;
+}
+
+/*
+ * -----------------------------------------------
+ *                    Header
+ * -----------------------------------------------
+ */
+
+#site-title {
+	color: #000;
+	font-family: 'Oswald', Helvetica, Arial, sans-serif;
+	font-weight: bold;
+	font-size: 80px;
+	margin: 0px;
+	text-transform: uppercase;
+	text-rendering: optimizeLegibility;
+}
+
+#site-title a {
+	color: #000;
+	letter-spacing: 1px;
+	text-decoration: none;
+}
+
+#site-title a:hover {
+	color: #36bcab;
+}
+
+/*
+#contents {
+	border-left: 1px solid #ccc;
+	height: auto;
+	margin-left: 199px;
+	padding-bottom: 10px;
+}
+*/
+
+
