--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,6 +7,13 @@ h1 {
  *                      Base
  * -----------------------------------------------
  */
+
+html, body {
+  height: 100%;
+	margin: 0;
+  padding: 0;
+}
+
 body {
 	background-color: #fff;
 	background-image: -moz-linear-gradient( rgba(0,0,0,0.22), rgba(255,255,255,0) 80px );
@@ -14,14 +21,16 @@ body {
 	color: #555;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 13px;
-	margin: 0;
 	text-align: center;
 }
 
 .container {
-	height: auto;
+  position: relative;
 	margin: 0 auto;
 	width: 900px;
+  min-height: 100%;
+	height: auto !important;
+  height: 100%;
 }
 
 header {
@@ -37,8 +46,16 @@ header {
  * -----------------------------------------------
  */
 
+a {
+	color: #000;
+}
+
 a:hover {
 	color: #36bcab;
+}
+
+a:visited {
+	color: #038978;
 }
 
 /*
@@ -68,12 +85,29 @@ a:hover {
 }
 
 /*
-#contents {
-	border-left: 1px solid #ccc;
+ * -----------------------------------------------
+ *                   Footer
+ * -----------------------------------------------
+ */
+
+footer {
+	border-top: 1px solid #ddd;
+	clear: both;
+	color: #555;
+	font-size: 11px;
+	font-weight: bold;
 	height: auto;
-	margin-left: 199px;
-	padding-bottom: 10px;
+	margin: 50px 0 30px;
+	padding-top: 25px;
+	text-align: center;
+	width: 800px;
 }
-*/
 
+footer p {
+  margin: 0.5em 0 0.5em 0
+}
 
+footer a {
+	color: #038978;
+	text-decoration: none;
+}
