--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,11 @@
 <header>
   <h1 id="site-title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
+  <nav id="menu">
+    <ul>
+      <li><a>Github</a></li>
+      <li><a>Tuto</a></li>
+      <li><a>Project</a></li>
+    </ul>
+  </nav>
 </header>
+
