--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -21,7 +21,7 @@ body {
 	color: #555;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 13px;
-	text-align: center;
+	text-rendering: optimizeLegibility;
 }
 
 .container {
@@ -31,12 +31,6 @@ body {
   min-height: 100%;
 	height: auto !important;
   height: 100%;
-}
-
-header {
-	min-height: 180px;
-	padding-top: 70px;
-	width: 900px;
 }
 
 
@@ -69,9 +63,9 @@ a:visited {
 	font-family: 'Oswald', Helvetica, Arial, sans-serif;
 	font-weight: bold;
 	font-size: 80px;
-	margin: 0px;
+	margin: 70px 0 50px 0;
 	text-transform: uppercase;
-	text-rendering: optimizeLegibility;
+	text-align: center;
 }
 
 #site-title a {
@@ -84,6 +78,46 @@ a:visited {
 	color: #36bcab;
 }
 
+#menu {
+  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #ddd;
+  margin-bottom: 25px;
+  padding: 10px;
+  text-align: right;
+}
+
+#menu ul {
+	list-style: none;
+	margin: 0;
+	padding-left: 0;
+}
+
+#menu li {
+  float: right;
+  position: relative;
+}
+
+#menu ul:after {
+	clear: both;
+	content: ' ';
+	display: block;
+}
+
+#menu a {
+	color: #666;
+	font-family: 'Oswald', Helvetica, Arial, sans-serif;
+	font-size: 18px;
+	margin: 0 10px;
+	padding: 4px 0;
+	text-decoration: none;
+	text-transform: uppercase;
+  cursor: pointer;
+}
+
+#menu a:hover {
+	color: #36bcab;
+}
+
 /*
  * -----------------------------------------------
  *                   Footer
@@ -92,15 +126,11 @@ a:visited {
 
 footer {
 	border-top: 1px solid #ddd;
-	clear: both;
-	color: #555;
 	font-size: 11px;
 	font-weight: bold;
-	height: auto;
 	margin: 50px 0 30px;
 	padding-top: 25px;
 	text-align: center;
-	width: 800px;
 }
 
 footer p {
