--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,9 +2,14 @@
   <h1 id="site-title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
   <nav id="menu">
     <ul>
-      <li><a>Github</a></li>
-      <li><a>Tuto</a></li>
-      <li><a>Project</a></li>
+      {{ with .Site.Menus.links }}
+        {{ range $link := . }}
+          <li><a href="{{ .URL }}">{{ .Name }}</a></li>
+        {{ end }}
+      {{ end }}
+      {{ range $name, $taxo := .Site.Taxonomies.categories }}
+      <li><a href="/categories/{{ $name | urlize }}">{{ $name }}</a></li>
+      {{ end }}
     </ul>
   </nav>
 </header>
