--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,6 +5,12 @@
     <div class="container">
     {{ partial "header.html" . }}
 
+    <div class="contents">
+      {{ range $key, $value := .Paginator.Pages }}
+      {{ .Render "caption" }}
+      {{ end }}
+    </div>
+
     {{ partial "footer.html" . }}
     </div>
   </body>
