--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,3 @@
-h1 {
-  text-align: center;
-}
-
 /*
  * -----------------------------------------------
  *                      Base
@@ -78,7 +74,7 @@ h1 {
 h2 {
   font-size: 25px;
   line-height: 38px;
-  margin: 5px 0px 15px 0px;
+  margin: 20px 0 15px 0;
 }
 
 h2.taxonomy-title {
@@ -87,6 +83,19 @@ h2.taxonomy-title {
   color: #eee;
   text-align: center;
 }
+
+h2.caption-title  {
+  margin: 5px 0 15px 0;
+}
+
+h3 {
+  margin: 10px 0 5px 0;
+}
+
+h4 {
+  margin: 5px 0 5px 0;
+}
+
 
 /*
  * -----------------------------------------------
@@ -224,7 +233,7 @@ article:after {
 article header {
   margin-bottom: 40px;
   border-bottom: 1px solid #ddd;
-  padding: 8px 0;
+  padding: 8px 5px 15px 15px;
   text-align: center;
 }
 
@@ -242,16 +251,14 @@ article header h2 {
 .pagination {
   font-family: 'Oswald', Helvetica, Arial, sans-serif;
   font-size: 18px;
-  padding: 60px 30px 0 30px;
+  padding: 60px 0 0 0;
 }
 
 .pagination a {
-  color: #555;
+  color: #eee;
+  background: #333;
+  padding: 5px 30px 5px 35px;
   text-decoration: none;
-}
-
-.pagination a:hover {
-  color: #36bcab;
 }
 
 .pagination a:first-child {
@@ -312,5 +319,3 @@ article header h2 {
     display: none
   }
 }
-
-
