--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer id="footer">
-	<p>{{ with .Site.Copyright | safeHTML }}{{ . }}{{ else }}&copy; {{ $.Site.LastChange.Year }} {{ if isset $.Site.Params "Author" }}{{ $.Site.Params.Author }}{{ else }}{{ .Site.Title }}{{ end }}{{ end }}</p>
-	{{ if isset $.Site.Params "Epitaph" }}<p>{{ $.Site.Params.Epitaph }}</p>{{ end }}
+	<p>{{ with .Site.Copyright | safeHTML }}{{ . }}{{ else }}&copy; {{ $.Site.LastChange.Year }} {{ if isset $.Site.Params "author" }}{{ $.Site.Params.author }}{{ else }}{{ .Site.Title }}{{ end }}{{ end }}</p>
+	{{ if isset $.Site.Params "epitaph" }}<p>{{ $.Site.Params.epitaph }}</p>{{ end }}
   <p>Powered by <a href="http://gohugo.io" target="_blank">Hugo</a>,</p>
 </footer>
