--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -9,7 +9,7 @@
   <p class="comments">0 comments</p>
   <p class="categories">
   {{ range .Params.categories }}
-  <a href="categories/{{ . | urlize }}">{{ . }}</a>
+  <a href="/categories/{{ . | urlize }}">{{ . }}</a>
   {{ end }}
   </p>
 </div>
