--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,6 +14,6 @@
     {{ partial "pagination.html" . }}
 
     {{ partial "footer.html" . }}
-    </div>
+    {{ partial "scripts.html" . }}
   </body>
 </html>
