--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,32 +1,20 @@
-<!DOCTYPE html>
-<html lang="{{ .Site.LanguageCode }}">
-  {{ partial "head.html" . }}
-  <body>
-    <div class="container">
-      {{ partial "header.html" . }}
+{{ define "content" }}
+<article>
+  {{ partial "meta.html" . }}
+  <div class="caption">
+    <header>
+      <h2>{{ .Title }}</h2>
 
-      <div class="contents">
-        <article>
-          {{ partial "meta.html" . }}
-          <div class="caption">
-            <header>
-              <h2>{{ .Title }}</h2>
+      {{ with .Params.tags }}
+      <p class="tags">
+      <strong>Tagged</strong>
+      {{ delimit (apply . "partial" "tags/link" ".") ", " }}
+      </p>
+      {{ end }}
 
-              {{ with .Params.tags }}
-              <p class="tags">
-              <strong>Tagged</strong>
-              {{ delimit (apply . "partial" "tags/link" ".") ", " }}
-              </p>
-              {{ end }}
-
-            </header>
-            {{ .Content }}
-          </div>
-        </article>
-        {{ template "_internal/disqus.html" . }}
-      </div>
-
-      {{ partial "footer.html" . }}
-    </div>
-  </body>
-</html>
+    </header>
+    {{ .Content }}
+  </div>
+</article>
+{{ template "_internal/disqus.html" . }}
+{{ end }}
