Fix a test for hugo 18
Due to changes in https://gohugo.io/meta/release-notes/#0-18-0-december-19th-2016
Some variables are passed case insensitive, but are actually all lowercased,
this was breaking a "isset" test which is still case sensitive

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,7 +7,7 @@
           <li><a href="{{ .URL }}">{{ .Name }}</a></li>
         {{ end }}
       {{ end }}
-      {{ if and (isset .Site.Params "showCategories") .Site.Params.showCategories }}
+      {{ if and (isset .Site.Params "showcategories") .Site.Params.showCategories }}
       {{ range $name, $taxo := .Site.Taxonomies.categories }}
       <li><a href="/categories/{{ $name | urlize }}">{{ $name }}</a></li>
       {{ end }}
