--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,12 +1,12 @@
 <head>
   <meta charset="utf-8">
-  {{ .Hugo.Generator }}
+  {{ hugo.Generator }}
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <link rel='stylesheet' id='oswald-css'  href='//fonts.googleapis.com/css?family=Oswald&#038;ver=3.3.2' type='text/css' media='all'>
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css" type='text/css' media='all'>
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/pygment.css" type='text/css' media='all'>
-  {{ if eq .URL "/" }}
+  {{ if eq .RelPermalink "/" }}
   <title>{{ .Title }}</title>
   <meta property='og:title' content="{{ .Title }}">
   <meta property="og:type" content="website">
